feat: fix with clippy warnings
